# LivingWorlds

./: .gitignore  CMakeLists.txt  End-to-End Implementation Plan.md  README.md  living_worlds_comprehensive_analysis.md  task.md  walkthrough.md
benchmark_plots/: summary_table.csv
benchmark_results/: combined.csv  grid1024_speed10.csv  grid1024_speed100.csv  grid1024_speed1000.csv  grid1024_speed10000.csv  grid1024_speed5000.csv  grid2048_speed10.csv  grid2048_speed100.csv  grid2048_speed1000.csv  grid2048_speed10000.csv  grid2048_speed5000.csv  grid3072_speed10.csv  grid3072_speed100.csv  grid3072_speed1000.csv  grid3072_speed10000.csv  grid3072_speed5000.csv  grid512_speed10.csv  grid512_speed100.csv  grid512_speed1000.csv  grid512_speed10000.csv  grid512_speed5000.csv  summary.txt
docs/: FINAL_REPORT.md  FRAME_JOURNEY.md  Living_Worlds_Presentation.html  Living_Worlds_Presentation.pptx  PRESENTATION_SCRIPT.md  PRESENTATION_SLIDES_DRAFT.md  QA_PREPARATION.md  TECHNICAL_DOCUMENTATION.md
docs/diagrams/: compute_dataflow.mmd  frame_pipeline.mmd  pingpong.mmd
planning/: reference_review.md  vulkan_vs_cuda.md  week3_heightmap_erosion.md  week4_biome_mechanics.md  week5_2.5d_rendering.md  week5_5_discrete_biome_ca.md  week6_interaction_polish.md
scripts/: analyze_benchmark.py  benchmark.sh  embed_images.py
shaders/: biome_ca.comp  biome_growth.comp  biome_init.comp  erosion.comp  game_of_life.comp  heightmap_viz.comp  noise_init.comp  terrain.frag  terrain.vert  test.comp
src/: living_worlds.cpp  living_worlds.hpp  main.cpp
